<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ort.misgastos.CategoryFormActivity" >

    <Button
        android:id="@+id/button_cancel_form"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="buttonCancelOnClick"
        android:text="@string/button_cancel_form" />

    <Button
        android:id="@+id/button_submit_form"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edit_text_new_category"
        android:layout_alignParentBottom="true"
        android:onClick="buttonSubmitOnClick"
        android:text="@string/button_submit_form" />

    <EditText
        android:id="@+id/edit_text_new_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/edit_text_new_category" >

        <requestFocus />
    </EditText>

</RelativeLayout>